Add MainApplicationPanel unit tests